# PBManager

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
data/: 10000.txt  100000.txt  5000.txt  pinyin.txt
include/: algori.hpp  utils.h
lib/: CMakeLists.txt  utils.cpp
src/: CMakeLists.txt  main.cpp
src/utils/impl/: utils.cpp
src/utils/include/: algori.hpp  utils.h
